# Baseline_Agentic_Workflow

./: .gitignore  README.md  docker-compose.yml
src/: Dockerfile
src/server/: .env  agent.py  llm_inference.py  pyproject.toml  requirements.txt
src/server/inference/: image_txt_llm.py  image_txt_to_txt.py  llm_inference.py  llm_inference[deprecated].py
src/server/mcp/: johnnys_favorites.py  text_media_generation.py
src/server/nodes/: llama.py
src/server/rest/: llm_client_sessions.py
src/util/: requests_util.py
