[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "argparse==1.4.0",
    "fastapi[all]>=0.135.1",
    "fastmcp==0.4.1",
    "numpy==2.2.6",
    "nvidia-ml-py>=13.590.48",
    "pdf2image==1.17.0",
    "pillow>=10.4.0",
    "pydantic==2.12.0",
    "python-dotenv==1.0.1",
    "torch==2.10.0",
    "transformers==4.56.0",
    "typing-extensions==4.14.1",
    "uvicorn==0.30.0",
    "vllm==0.19.1",
]
